--- a/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/package.json
+++ b/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.0",
+    "axios": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
@@ -19,6 +20,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "dotenv": "^16.0.3",
     "vite": "^4.2.1"
   }
 }
