--- a/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/package.json
+++ b/Aplicação/SCE-Sistema-de-Cadastro-de-Estagiarios/package.json
@@ -12,6 +12,8 @@
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.0",
     "axios": "^1.3.5",
+    "firebase": "^9.19.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0"
